--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>메인 코드입니다.</h1>
+    <h1>지돌이</h1>
+    <p>기능 개발 디딤발</p>
   </body>
 </html>
 <!-- test -->
