이미지 크기 조절 및 css약간 변경

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </form>
         
         <br>
-        <hr>
+        <hr style="margin-bottom: 25px;">
 
         <div class="container mt-3"></div>
         <table class="itemTable">
